[tool.poetry]
name = "ytdl-podcast"
version = "1.0.0"
description = "Make RSS feeds from Youtube playlists/channels"
authors = ["solarkraft"]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2022.11.11"
flask = "^2.2.2"
flask-rangerequest = "^0.0.2"
feedgen = "^0.9.0"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
